--- a/src/main/resources/static/app/index.html
+++ b/src/main/resources/static/app/index.html
@@ -33,6 +33,7 @@
   <!--<script src="/bower_components/oauth-signature/dist/oauth-signature.js"></script>-->
   
  	<link rel="stylesheet" href="../bower_components/angular-datatables/dist/css/angular-datatables.min.css">
+ 	<link rel="stylesheet" href="../bower_components/ng-notify/dist/ng-notify.min.css">
  	
     <link href="assets/css/demo.css" rel="stylesheet" />
  	
@@ -59,6 +60,7 @@
 	<script src="../bower_components/angular-tag-cloud/src/ng-tag-cloud.js"></script>
 	<script src="../bower_components/datatables.net/js/jquery.dataTables.min.js"></script>
 	<script src="../bower_components/angular-datatables/dist/angular-datatables.min.js"></script>
+	<script src="../bower_components/ng-notify/dist/ng-notify.min.js"></script>
 	
 	<!--  Checkbox, Radio & Switch Plugins -->
 	<script src="assets/js/bootstrap-checkbox-radio-switch.js"></script>
